# ai-utils

./: .gitignore  README.md  pyproject.toml
docs/upwork/: UPWORK_AUTOMATION_SCRIPTS.md
examples/: 01_text_processing.py  02_chunking_long_text.py  03_llm_client_usage.py  04_json_extraction.py  05_cost_dashboard.py  README.md  benchmark_chunking.py
src/ai_utils/: __init__.py  helpers.py  llm_client.py  pricing_config.json
src/ai_utils.egg-info/: PKG-INFO  SOURCES.txt
tests/: __init__.py  test_helpers.py  test_llm_client.py  test_text_processing.py
