[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-utils"
version = "0.1.0"
description = "A small Python package with helpful AI utility functions"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "RazonIn4K"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/RazonIn4K/ai-utils"
Repository = "https://github.com/RazonIn4K/ai-utils"

[tool.setuptools.packages.find]
where = ["src"]
